# sut-os-fall2023

./: CMakeLists.txt  README.md
P1/hw1/: io.c  io.h  main.c  parse.c  parse.h  process.c  process.h  shell  shell.c
P1/test/: test1  test1.out  test2  test2.out  test3  test3.out  test4  test4.out  test5  test5.out
P2/: httpserver  httpserver.c  wq.c  wq.h
P2/files/my_documents/: index.html
P4/: Makefile  mm_alloc.c  mm_test.c
